# Efficient-RAG-with-Learned-Retrieval-and-Uncertainty-Quantification

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: index_checkpoint.json
data/preprocessing/: build_chroma_index.py  prepare_corpus.py  verify_dataset.py
docs/: uncertainty_theory.md
experiments/: run_calibration.py  run_evaluation.py  run_router_training.py
models/router_lora/: training_results.json
rag_uq/: __init__.py  confidence.py  eval_protocol.py  router.py  streaming_index.py
scripts/: download_models.py  run_experiment.sh  setup.sh
tests/: __init__.py  test_confidence.py  test_eval_protocol.py  test_router.py
wiki/: API-Reference.md  Architecture.md  Confidence-Module.md  Evaluation-Protocol.md  README.md  Retrieval-Module.md  Router-Module.md
wiki/github-wiki-pages/: Home.md  Installation.md  Quick-Start.md  Troubleshooting.md
